--- a/style.css
+++ b/style.css
@@ -1,3 +1,138 @@
-body{
-	background-color: yellow;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap');
+
+body, html{
+	font-family: 'Open Sans', sans-serif;
+	padding: 0;
+	margin: 0;
 }
+
+h1{
+	font-weight: 800;
+	font-size: 50px;
+}
+
+h3{
+	font-weight: bolder;
+	font-size: 20px;
+}
+
+h4{
+	font-weight: bold;
+	font-size: 20px;
+}
+
+.wrapper{
+	width: 960px;
+	margin: 0 auto;
+}
+
+.hero-banner{
+	background-color: #007FFF;
+	min-height: 100vh;
+	padding: 50px 20px;
+	box-size: border-box;
+	position: relative;
+	overflow: hidden;
+}
+
+.hero-banner h1{
+	color: white;
+	margin: 14px 0 20px;
+}
+
+.hero-banner h3{
+	color: white;
+	margin: 0 0 35px;
+}
+
+.hero-banner h4,
+.hero-banner h4 a{
+	color: white;
+	margin: 0;
+}
+
+.character1{
+	background: url(img/character1.png) no-repeat 0 0;
+	background-size: 100%;
+	width: 363px;
+	height: 344px;
+	position: absolute; top: 10%; right: 10%;
+	transform: rotate(15deg);
+}
+
+.character2{
+	background: url(img/character2.png) no-repeat 0 0;
+	background-size: 100%;
+	width: 309px;
+	height: 371px;
+	position: absolute; top: 213px; right: 277px;
+}
+
+.character3{
+	background: url(img/character3.png) no-repeat 0 0;
+	background-size: 100%;
+	width: 297px;
+	height: 286px;
+	position: absolute; bottom: 74px; right: 109px;
+}
+
+a.cta,
+button.cta{
+	font-size: 30px;
+	font-weight: bold;
+	color: white;
+	background: #007FFF;
+	display: inline-block;
+	box-shadow: 0 0 0 10pt rgba(0, 127, 255, .15);
+	padding: 20px 30px;
+	border-radius: 10px;
+	text-decoration: none;
+}
+
+a.cta.alt,
+button.cta.alt{
+	background-color: #FFD400;
+	color: #111111;
+	box-shadow: 0 0 0 10pt rgba(0, 0, 0, .15);
+}
+
+nav{
+	height: 100px;
+	background-color: white;
+	box-shadow: 0 5px 8px rgba(0, 0, 0, .2);
+	position: sticky;
+}
+
+nav .logo{
+	display: block;
+	width: 300px;
+	height: 40px;
+	position: absolute; top: 50%; left: 0;
+	margin-top: -20PX;
+	margin-left: 30px;
+	background: url(img/logo.png) no-repeat 0 0;
+	background-size: 100%;
+}
+
+nav ul{
+	padding: 0;
+	margin: 0;
+}
+
+nav ul li{
+	margin: 0;
+	position: 0;
+}
+
+/*
+
+<nav>
+		<a href="#" class="logo">The Gang</a>
+		<ul>
+			<li><a href="#">Sign Up</a></li>
+			<li><a href="#story">The Story</a></li>
+			<li><a href="#more-info">More Info</a></li>
+		</ul>
+	</nav>
+
+*/
