--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ h1{
 	font-size: 50px;
 }
 
+h2{
+	font-weight: 800;
+	font-size: 50px;
+}
+}
+
 h3{
 	font-weight: bolder;
 	font-size: 20px;
@@ -19,6 +25,12 @@ h3{
 h4{
 	font-weight: bold;
 	font-size: 20px;
+}
+
+p{
+	font-weight: bold;
+	font-size: 30px;
+	margin: 30px 0;
 }
 
 .wrapper{
@@ -101,6 +113,7 @@ nav{
 	background-color: white;
 	box-shadow: 0 5px 8px rgba(0, 0, 0, .2);
 	position: sticky;
+	top: 0;
 }
 
 nav .logo{
@@ -112,27 +125,48 @@ nav .logo{
 	margin-left: 30px;
 	background: url(img/logo.png) no-repeat 0 0;
 	background-size: 100%;
+	overflow: hidden;
+	text-indent: -999px;
 }
 
 nav ul{
 	padding: 0;
-	margin: 0;
+	margin: 0 20px 0 0;
 }
 
 nav ul li{
 	margin: 0;
 	position: 0;
+	display: block;
+	float: right;
 }
+
+nav ul li a{
+	display: block;
+	height: 100%;
+	box-sizing: border-box;
+	font-size: 30px;
+	text-transform: uppercase;
+	font-weight: bold;
+	color: #111111;
+	text-decoration: none;
+	padding: 35px 10px;
+	line-height: 30px;
+}
+
+.more-info{
+	text-align: center;
+}
+
+
 
 /*
 
-<nav>
-		<a href="#" class="logo">The Gang</a>
-		<ul>
-			<li><a href="#">Sign Up</a></li>
-			<li><a href="#story">The Story</a></li>
-			<li><a href="#more-info">More Info</a></li>
-		</ul>
-	</nav>
+<div class="more-info" id="more-info">
+		<h2>Join Our Fan Club</h2>
+		<p>Every week we have <span class="highlight"> a party.</span> If you want to join out fan club. Members will also recieve pictures of us in all kinds of shapes and sizes. Cool huh?
+		</p>
+		<button class="cta">Sign Me Up!</button>
+	</div>
 
 */
